[package]
name = "CommandLineTool_moving-file-and-folder-in-downloaddirectory-at-currentdirectory"
version = "1.0.3"
edition = "2024"
description = "Command Line Tool : Moving File and Folder in Download Directory at Current Directory"
authors = ["IKATA゚ <>"]
license = "MIT"
repository = "https://github.com/c0b23092db/dm"

[[bin]]
name = "dm"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "s"
debug = false
codegen-units = 1
strip = "symbols"

[dependencies]
dirs = "6.0.0"
crossterm = {version = "0.28.1", features = ["events"]}