[package]
name = "download_mover"
version = "1.3.1"
edition = "2024"
description = "CLI: Moving File and Folder in Download Directory at Current Directory"
categories = ["command-line-utilities", "command-line-interface", "filesystem", "development-tools"]
keywords = ["cli", "download", "move", "file", "directory"]
license = "MIT"
readme = "README-en.md"
authors = ["ikata"]
repository = "https://github.com/c0b23092db/dm"

[[bin]]
name = "dm"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "s"
debug = false
codegen-units = 1
strip = "symbols"

[dependencies]
dirs = "6.0"
clap = { version = "4.6", features = ["derive"] }
trash = "5"
open = "5"
